@@ -23,16 +23,33 @@ import java.util.ArrayList;
 import java.util.List;
 
 import org.apache.hadoop.hive.conf.HiveConf;
+import org.apache.hadoop.hive.ql.exec.mr.MapRedTask;
+import org.apache.hadoop.hive.ql.exec.mr.MapredLocalTask;
+import org.apache.hadoop.hive.ql.exec.spark.SparkTask;
+import org.apache.hadoop.hive.ql.exec.tez.TezTask;
+import org.apache.hadoop.hive.ql.index.IndexMetadataChangeTask;
+import org.apache.hadoop.hive.ql.index.IndexMetadataChangeWork;
+import org.apache.hadoop.hive.ql.io.merge.MergeFileTask;
+import org.apache.hadoop.hive.ql.io.merge.MergeFileWork;
+import org.apache.hadoop.hive.ql.io.rcfile.stats.PartialScanTask;
+import org.apache.hadoop.hive.ql.io.rcfile.stats.PartialScanWork;
+import org.apache.hadoop.hive.ql.plan.ColumnStatsUpdateWork;
+import org.apache.hadoop.hive.ql.plan.ColumnStatsWork;
 import org.apache.hadoop.hive.ql.plan.ConditionalWork;
 import org.apache.hadoop.hive.ql.plan.CopyWork;
 import org.apache.hadoop.hive.ql.plan.DDLWork;
+import org.apache.hadoop.hive.ql.plan.DependencyCollectionWork;
+import org.apache.hadoop.hive.ql.plan.ExplainSQRewriteWork;
 import org.apache.hadoop.hive.ql.plan.ExplainWork;
 import org.apache.hadoop.hive.ql.plan.FetchWork;
 import org.apache.hadoop.hive.ql.plan.FunctionWork;
 import org.apache.hadoop.hive.ql.plan.MapredLocalWork;
 import org.apache.hadoop.hive.ql.plan.MapredWork;
 import org.apache.hadoop.hive.ql.plan.MoveWork;
+import org.apache.hadoop.hive.ql.plan.SparkWork;
+import org.apache.hadoop.hive.ql.plan.StatsNoJobWork;
 import org.apache.hadoop.hive.ql.plan.StatsWork;
+import org.apache.hadoop.hive.ql.plan.TezWork;
 
 /**
  * TaskFactory implementation.
@@ -44,44 +61,58 @@ public final class TaskFactory {
    *
    * @param <T>
    */
-  public static final class taskTuple<T extends Serializable> {
+  public static final class TaskTuple<T extends Serializable> {
     public Class<T> workClass;
     public Class<? extends Task<T>> taskClass;
 
-    public taskTuple(Class<T> workClass, Class<? extends Task<T>> taskClass) {
+    public TaskTuple(Class<T> workClass, Class<? extends Task<T>> taskClass) {
       this.workClass = workClass;
       this.taskClass = taskClass;
     }
   }
 
-  public static ArrayList<taskTuple<? extends Serializable>> taskvec;
+  public static ArrayList<TaskTuple<? extends Serializable>> taskvec;
   static {
-    taskvec = new ArrayList<taskTuple<? extends Serializable>>();
-    taskvec.add(new taskTuple<MoveWork>(MoveWork.class, MoveTask.class));
-    taskvec.add(new taskTuple<FetchWork>(FetchWork.class, FetchTask.class));
-    taskvec.add(new taskTuple<CopyWork>(CopyWork.class, CopyTask.class));
-    taskvec.add(new taskTuple<DDLWork>(DDLWork.class, DDLTask.class));
-    taskvec.add(new taskTuple<FunctionWork>(FunctionWork.class,
+    taskvec = new ArrayList<TaskTuple<? extends Serializable>>();
+    taskvec.add(new TaskTuple<MoveWork>(MoveWork.class, MoveTask.class));
+    taskvec.add(new TaskTuple<FetchWork>(FetchWork.class, FetchTask.class));
+    taskvec.add(new TaskTuple<CopyWork>(CopyWork.class, CopyTask.class));
+    taskvec.add(new TaskTuple<DDLWork>(DDLWork.class, DDLTask.class));
+    taskvec.add(new TaskTuple<FunctionWork>(FunctionWork.class,
         FunctionTask.class));
     taskvec
-        .add(new taskTuple<ExplainWork>(ExplainWork.class, ExplainTask.class));
-    taskvec.add(new taskTuple<ConditionalWork>(ConditionalWork.class,
+        .add(new TaskTuple<ExplainWork>(ExplainWork.class, ExplainTask.class));
+    taskvec
+        .add(new TaskTuple<ExplainSQRewriteWork>(ExplainSQRewriteWork.class, ExplainSQRewriteTask.class));
+    taskvec.add(new TaskTuple<ConditionalWork>(ConditionalWork.class,
         ConditionalTask.class));
-    taskvec.add(new taskTuple<MapredWork>(MapredWork.class,
+    taskvec.add(new TaskTuple<MapredWork>(MapredWork.class,
                                           MapRedTask.class));
 
-    taskvec.add(new taskTuple<MapredLocalWork>(MapredLocalWork.class,
+    taskvec.add(new TaskTuple<MapredLocalWork>(MapredLocalWork.class,
         MapredLocalTask.class));
-    taskvec.add(new taskTuple<StatsWork>(StatsWork.class,
+    taskvec.add(new TaskTuple<StatsWork>(StatsWork.class,
         StatsTask.class));
-
+    taskvec.add(new TaskTuple<StatsNoJobWork>(StatsNoJobWork.class, StatsNoJobTask.class));
+    taskvec.add(new TaskTuple<ColumnStatsWork>(ColumnStatsWork.class, ColumnStatsTask.class));
+    taskvec.add(new TaskTuple<ColumnStatsUpdateWork>(ColumnStatsUpdateWork.class, ColumnStatsUpdateTask.class));
+    taskvec.add(new TaskTuple<MergeFileWork>(MergeFileWork.class,
+        MergeFileTask.class));
+    taskvec.add(new TaskTuple<DependencyCollectionWork>(DependencyCollectionWork.class,
+        DependencyCollectionTask.class));
+    taskvec.add(new TaskTuple<PartialScanWork>(PartialScanWork.class,
+        PartialScanTask.class));
+    taskvec.add(new TaskTuple<IndexMetadataChangeWork>(IndexMetadataChangeWork.class,
+        IndexMetadataChangeTask.class));
+    taskvec.add(new TaskTuple<TezWork>(TezWork.class, TezTask.class));
+    taskvec.add(new TaskTuple<SparkWork>(SparkWork.class, SparkTask.class));
 
   }
 
   private static ThreadLocal<Integer> tid = new ThreadLocal<Integer>() {
     @Override
     protected synchronized Integer initialValue() {
-      return new Integer(0);
+      return Integer.valueOf(0);
     }
   };
 
@@ -92,14 +123,14 @@ public final class TaskFactory {
   }
 
   public static void resetId() {
-    tid.set(new Integer(0));
+    tid.set(Integer.valueOf(0));
   }
 
   @SuppressWarnings("unchecked")
   public static <T extends Serializable> Task<T> get(Class<T> workClass,
       HiveConf conf) {
 
-    for (taskTuple<? extends Serializable> t : taskvec) {
+    for (TaskTuple<? extends Serializable> t : taskvec) {
       if (t.workClass == workClass) {
         try {
           Task<T> ret = (Task<T>) t.taskClass.newInstance();
