@@ -18,10 +18,10 @@
 
 package org.apache.hadoop.hive.ql.optimizer;
 
-import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
@@ -30,19 +30,20 @@ import java.util.Stack;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
+import org.apache.hadoop.hive.ql.exec.AbstractMapJoinOperator;
 import org.apache.hadoop.hive.ql.exec.ColumnInfo;
 import org.apache.hadoop.hive.ql.exec.CommonJoinOperator;
-import org.apache.hadoop.hive.ql.exec.FileSinkOperator;
 import org.apache.hadoop.hive.ql.exec.FilterOperator;
 import org.apache.hadoop.hive.ql.exec.GroupByOperator;
 import org.apache.hadoop.hive.ql.exec.JoinOperator;
+import org.apache.hadoop.hive.ql.exec.LateralViewForwardOperator;
 import org.apache.hadoop.hive.ql.exec.LateralViewJoinOperator;
 import org.apache.hadoop.hive.ql.exec.LimitOperator;
-import org.apache.hadoop.hive.ql.exec.MapJoinOperator;
 import org.apache.hadoop.hive.ql.exec.Operator;
+import org.apache.hadoop.hive.ql.exec.OperatorFactory;
+import org.apache.hadoop.hive.ql.exec.PTFOperator;
 import org.apache.hadoop.hive.ql.exec.ReduceSinkOperator;
 import org.apache.hadoop.hive.ql.exec.RowSchema;
-import org.apache.hadoop.hive.ql.exec.ScriptOperator;
 import org.apache.hadoop.hive.ql.exec.SelectOperator;
 import org.apache.hadoop.hive.ql.exec.TableScanOperator;
 import org.apache.hadoop.hive.ql.exec.UDTFOperator;
@@ -52,19 +53,32 @@ import org.apache.hadoop.hive.ql.lib.Node;
 import org.apache.hadoop.hive.ql.lib.NodeProcessor;
 import org.apache.hadoop.hive.ql.lib.NodeProcessorCtx;
 import org.apache.hadoop.hive.ql.metadata.VirtualColumn;
-import org.apache.hadoop.hive.ql.parse.OpParseContext;
 import org.apache.hadoop.hive.ql.parse.RowResolver;
 import org.apache.hadoop.hive.ql.parse.SemanticException;
 import org.apache.hadoop.hive.ql.plan.AggregationDesc;
+import org.apache.hadoop.hive.ql.plan.ExprNodeColumnDesc;
 import org.apache.hadoop.hive.ql.plan.ExprNodeDesc;
+import org.apache.hadoop.hive.ql.plan.ExprNodeDescUtils;
 import org.apache.hadoop.hive.ql.plan.GroupByDesc;
 import org.apache.hadoop.hive.ql.plan.JoinDesc;
 import org.apache.hadoop.hive.ql.plan.MapJoinDesc;
+import org.apache.hadoop.hive.ql.plan.OperatorDesc;
+import org.apache.hadoop.hive.ql.plan.PTFDesc;
 import org.apache.hadoop.hive.ql.plan.PlanUtils;
 import org.apache.hadoop.hive.ql.plan.ReduceSinkDesc;
 import org.apache.hadoop.hive.ql.plan.SelectDesc;
 import org.apache.hadoop.hive.ql.plan.TableDesc;
 import org.apache.hadoop.hive.ql.plan.TableScanDesc;
+import org.apache.hadoop.hive.ql.plan.UnionDesc;
+import org.apache.hadoop.hive.ql.plan.ptf.PTFExpressionDef;
+import org.apache.hadoop.hive.ql.plan.ptf.PTFInputDef;
+import org.apache.hadoop.hive.ql.plan.ptf.PartitionedTableFunctionDef;
+import org.apache.hadoop.hive.ql.plan.ptf.ShapeDetails;
+import org.apache.hadoop.hive.ql.plan.ptf.WindowFunctionDef;
+import org.apache.hadoop.hive.ql.plan.ptf.WindowTableFunctionDef;
+import org.apache.hadoop.hive.ql.udf.ptf.Noop;
+import org.apache.hadoop.hive.serde2.objectinspector.StructField;
+import org.apache.hadoop.hive.serde2.objectinspector.StructObjectInspector;
 
 /**
  * Factory for generating the different node processors used by ColumnPruner.
@@ -79,6 +93,7 @@ public final class ColumnPrunerProcFactory {
    * Node Processor for Column Pruning on Filter Operators.
    */
   public static class ColumnPrunerFilterProc implements NodeProcessor {
+    @Override
     public Object process(Node nd, Stack<Node> stack, NodeProcessorCtx ctx,
         Object... nodeOutputs) throws SemanticException {
       FilterOperator op = (FilterOperator) nd;
@@ -87,11 +102,14 @@ public final class ColumnPrunerProcFactory {
       // get list of columns used in the filter
       List<String> cl = condn.getCols();
       // merge it with the downstream col list
+      List<String> filterOpPrunedColLists = Utilities.mergeUniqElems(cppCtx.genColLists(op), cl);
+      List<String> filterOpPrunedColListsOrderPreserved = preserveColumnOrder(op,
+          filterOpPrunedColLists);
       cppCtx.getPrunedColLists().put(op,
-          Utilities.mergeUniqElems(cppCtx.genColLists(op), cl));
+          filterOpPrunedColListsOrderPreserved);
 
       pruneOperator(cppCtx, op, cppCtx.getPrunedColLists().get(op));
-
+      cppCtx.handleFilterUnionChildren(op);
       return null;
     }
   }
@@ -109,12 +127,13 @@ public final class ColumnPrunerProcFactory {
    * Node Processor for Column Pruning on Group By Operators.
    */
   public static class ColumnPrunerGroupByProc implements NodeProcessor {
+    @Override
     public Object process(Node nd, Stack<Node> stack, NodeProcessorCtx ctx,
         Object... nodeOutputs) throws SemanticException {
-      GroupByOperator op = (GroupByOperator) nd;
+      GroupByOperator gbOp = (GroupByOperator) nd;
       ColumnPrunerProcCtx cppCtx = (ColumnPrunerProcCtx) ctx;
       List<String> colLists = new ArrayList<String>();
-      GroupByDesc conf = op.getConf();
+      GroupByDesc conf = gbOp.getConf();
       ArrayList<ExprNodeDesc> keys = conf.getKeys();
       for (ExprNodeDesc key : keys) {
         colLists = Utilities.mergeUniqElems(colLists, key.getCols());
@@ -127,8 +146,54 @@ public final class ColumnPrunerProcFactory {
           colLists = Utilities.mergeUniqElems(colLists, param.getCols());
         }
       }
+      int groupingSetPosition = conf.getGroupingSetPosition();
+      if (groupingSetPosition >= 0) {
+        List<String> neededCols = cppCtx.genColLists(gbOp);
+        String groupingColumn = conf.getOutputColumnNames().get(groupingSetPosition);
+        if (!neededCols.contains(groupingColumn)) {
+          conf.getOutputColumnNames().remove(groupingSetPosition);
+          if (gbOp.getSchema() != null) {
+            gbOp.getSchema().getSignature().remove(groupingSetPosition);
+          }
+        }
+      }
 
-      cppCtx.getPrunedColLists().put(op, colLists);
+      // If the child has a different schema, we create a Project operator between them both,
+      // as we cannot prune the columns in the GroupBy operator
+      for (Operator<?> child : gbOp.getChildOperators()) {
+        if (child instanceof SelectOperator || child instanceof ReduceSinkOperator) {
+          continue;
+        }
+        Set<String> neededCols = new HashSet<String>(cppCtx.genColLists(gbOp, child));
+        if (neededCols.size() < gbOp.getSchema().getSignature().size()) {
+          ArrayList<ExprNodeDesc> exprs = new ArrayList<ExprNodeDesc>();
+          ArrayList<String> outputColNames = new ArrayList<String>();
+          Map<String, ExprNodeDesc> colExprMap = new HashMap<String, ExprNodeDesc>();
+          ArrayList<ColumnInfo> outputRS = new ArrayList<ColumnInfo>();
+          for (ColumnInfo colInfo : gbOp.getSchema().getSignature()) {
+            if (!neededCols.contains(colInfo.getInternalName())) {
+              continue;
+            }
+            ExprNodeDesc colDesc = new ExprNodeColumnDesc(colInfo.getType(),
+                colInfo.getInternalName(), colInfo.getTabAlias(), colInfo.getIsVirtualCol());
+            exprs.add(colDesc);
+            outputColNames.add(colInfo.getInternalName());
+            ColumnInfo newCol = new ColumnInfo(colInfo.getInternalName(), colInfo.getType(),
+                    colInfo.getTabAlias(), colInfo.getIsVirtualCol(), colInfo.isHiddenVirtualCol());
+            newCol.setAlias(colInfo.getAlias());
+            outputRS.add(newCol);
+            colExprMap.put(colInfo.getInternalName(), colDesc);
+          }
+          SelectDesc select = new SelectDesc(exprs, outputColNames, false);
+          gbOp.removeChild(child);
+          SelectOperator sel = (SelectOperator) OperatorFactory.getAndMakeChild(
+              select, new RowSchema(outputRS), gbOp);
+          OperatorFactory.makeChild(sel, child);
+          sel.setColumnExprMap(colExprMap);
+        }
+      }
+
+      cppCtx.getPrunedColLists().put(gbOp, colLists);
       return null;
     }
   }
@@ -142,15 +207,243 @@ public final class ColumnPrunerProcFactory {
     return new ColumnPrunerGroupByProc();
   }
 
+  public static class ColumnPrunerScriptProc implements NodeProcessor {
+    @Override
+    @SuppressWarnings("unchecked")
+    public Object process(Node nd, Stack<Node> stack, NodeProcessorCtx ctx,
+        Object... nodeOutputs) throws SemanticException {
+
+      ColumnPrunerProcCtx cppCtx = (ColumnPrunerProcCtx) ctx;
+      Operator<? extends OperatorDesc> op = (Operator<? extends OperatorDesc>) nd;
+      RowSchema inputRS = op.getSchema();
+
+      List<String> prunedCols = cppCtx.getPrunedColList(op.getChildOperators()
+          .get(0));
+      Operator<? extends OperatorDesc> parent = op.getParentOperators().get(0);
+      RowSchema parentRS = parent.getSchema();
+      List<ColumnInfo> sig = parentRS.getSignature();
+      List<String> colList = new ArrayList<String>();
+      for (ColumnInfo cI : sig) {
+        colList.add(cI.getInternalName());
+      }
+
+      if (prunedCols.size() != inputRS.getSignature().size()
+          && !(op.getChildOperators().get(0) instanceof SelectOperator)) {
+        ArrayList<ExprNodeDesc> exprs = new ArrayList<ExprNodeDesc>();
+        ArrayList<String> outputs = new ArrayList<String>();
+        Map<String, ExprNodeDesc> colExprMap = new HashMap<String, ExprNodeDesc>();
+        ArrayList<ColumnInfo> outputRS = new ArrayList<ColumnInfo>();
+        for (String internalName : prunedCols) {
+          ColumnInfo valueInfo = inputRS.getColumnInfo(internalName);
+          ExprNodeDesc colDesc = new ExprNodeColumnDesc(valueInfo.getType(),
+              valueInfo.getInternalName(), valueInfo.getTabAlias(), valueInfo.getIsVirtualCol());
+          exprs.add(colDesc);
+          outputs.add(internalName);
+          ColumnInfo newCol = new ColumnInfo(internalName, valueInfo.getType(), valueInfo.getTabAlias(),
+                  valueInfo.getIsVirtualCol(), valueInfo.isHiddenVirtualCol());
+          newCol.setAlias(valueInfo.getAlias());
+          outputRS.add(newCol);
+          colExprMap.put(internalName, colDesc);
+        }
+        SelectDesc select = new SelectDesc(exprs, outputs, false);
+
+        Operator<? extends OperatorDesc> child = op.getChildOperators().get(0);
+        op.removeChild(child);
+        SelectOperator sel = (SelectOperator) OperatorFactory.getAndMakeChild(
+            select, new RowSchema(outputRS), op);
+        OperatorFactory.makeChild(sel, child);
+
+        sel.setColumnExprMap(colExprMap);
+      }
+
+      cppCtx.getPrunedColLists().put(op, colList);
+      return null;
+    }
+  }
+
+  public static class ColumnPrunerLimitProc extends ColumnPrunerDefaultProc {
+
+    @Override
+    public Object process(Node nd, Stack<Node> stack, NodeProcessorCtx ctx,
+        Object... nodeOutputs) throws SemanticException {
+      super.process(nd, stack, ctx, nodeOutputs);
+      List<String> cols = ((ColumnPrunerProcCtx)ctx).getPrunedColLists().get(nd);
+      if (null != cols) {
+        pruneOperator(ctx, (LimitOperator) nd, cols);
+      }
+      return null;
+    }
+  }
+
+  public static ColumnPrunerLimitProc getLimitProc() {
+    return new ColumnPrunerLimitProc();
+  }
+
+  public static ColumnPrunerScriptProc getScriptProc() {
+    return new ColumnPrunerScriptProc();
+  }
+
+  /**
+   * - Pruning can only be done for Windowing. PTFs are black boxes,
+   *   we assume all columns are needed.
+   * - add column names referenced in WindowFn args and in WindowFn expressions
+   *   to the pruned list of the child Select Op.
+   * - finally we set the prunedColList on the ColumnPrunerContx;
+   *   and update the RR & signature on the PTFOp.
+   */
+  public static class ColumnPrunerPTFProc extends ColumnPrunerScriptProc {
+    @Override
+    public Object process(Node nd, Stack<Node> stack, NodeProcessorCtx ctx,
+        Object... nodeOutputs) throws SemanticException {
+
+      ColumnPrunerProcCtx cppCtx = (ColumnPrunerProcCtx) ctx;
+      PTFOperator op = (PTFOperator) nd;
+      PTFDesc conf = op.getConf();
+      //Since we cannot know what columns will be needed by a PTF chain,
+      //we do not prune columns on PTFOperator for PTF chains.
+      PartitionedTableFunctionDef funcDef = conf.getFuncDef();
+      if (!conf.forWindowing() && !Noop.class.isInstance(funcDef.getTFunction())) {
+        return super.process(nd, stack, cppCtx, nodeOutputs);
+      }
+      
+      //we create a copy of prunedCols to create a list of pruned columns for PTFOperator
+      List<String> prunedCols = 
+          new ArrayList<String>(cppCtx.getPrunedColList(op.getChildOperators().get(0)));
+      if (funcDef instanceof WindowTableFunctionDef) {
+        WindowTableFunctionDef def = (WindowTableFunctionDef) funcDef;
+        prunedCols = Utilities.mergeUniqElems(getWindowFunctionColumns(def), prunedCols);
+      }
+      
+      List<ColumnInfo> newRS = prunedColumnsList(prunedCols, op.getSchema(), funcDef);      
+      
+      op.getSchema().setSignature(new ArrayList<ColumnInfo>(newRS));
+
+      ShapeDetails outputShape = funcDef.getStartOfChain().getInput().getOutputShape();
+      cppCtx.getPrunedColLists().put(op, outputShape.getColumnNames());
+      return null;
+    }
+
+    private List<ColumnInfo> buildPrunedRS(List<String> prunedCols, RowSchema oldRS) 
+        throws SemanticException {
+      ArrayList<ColumnInfo> sig = new ArrayList<ColumnInfo>();
+      HashSet<String> prunedColsSet = new HashSet<String>(prunedCols);
+      for (ColumnInfo cInfo : oldRS.getSignature()) {
+        if (prunedColsSet.contains(cInfo.getInternalName())) {
+          sig.add(cInfo);
+        }
+      }
+      return sig;
+    }
+
+    // always should be in this order (see PTFDeserializer#initializeWindowing)
+    private List<String> getWindowFunctionColumns(WindowTableFunctionDef tDef) {
+      List<String> columns = new ArrayList<String>();
+      if (tDef.getWindowFunctions() != null) {
+        for (WindowFunctionDef wDef : tDef.getWindowFunctions()) {
+          columns.add(wDef.getAlias());
+        }
+      }
+      return columns;
+    }
+    
+    private RowResolver buildPrunedRR(List<String> prunedCols, RowSchema oldRS)
+        throws SemanticException {
+      RowResolver resolver = new RowResolver();
+      HashSet<String> prunedColsSet = new HashSet<String>(prunedCols);
+      for (ColumnInfo cInfo : oldRS.getSignature()) {
+        if (prunedColsSet.contains(cInfo.getInternalName())) {
+          resolver.put(cInfo.getTabAlias(), cInfo.getAlias(), cInfo);
+        }
+      }
+      return resolver;
+    }
+
+    /*
+     * add any input columns referenced in WindowFn args or expressions.
+     */
+    private List<ColumnInfo> prunedColumnsList(List<String> prunedCols, RowSchema oldRS,
+        PartitionedTableFunctionDef pDef) throws SemanticException {
+      pDef.getOutputShape().setRr(null);
+      pDef.getOutputShape().setColumnNames(null);
+      if (pDef instanceof WindowTableFunctionDef) {
+        WindowTableFunctionDef tDef = (WindowTableFunctionDef) pDef;
+        if (tDef.getWindowFunctions() != null) {
+          for (WindowFunctionDef wDef : tDef.getWindowFunctions()) {
+            if (wDef.getArgs() == null) {
+              continue;
+            }
+            for (PTFExpressionDef arg : wDef.getArgs()) {
+              ExprNodeDesc exprNode = arg.getExprNode();
+              Utilities.mergeUniqElems(prunedCols, exprNode.getCols());
+            }
+          }
+        }
+        if (tDef.getPartition() != null) {
+          for (PTFExpressionDef col : tDef.getPartition().getExpressions()) {
+            ExprNodeDesc exprNode = col.getExprNode();
+            Utilities.mergeUniqElems(prunedCols, exprNode.getCols());
+          }
+        }
+        if (tDef.getOrder() != null) {
+          for (PTFExpressionDef col : tDef.getOrder().getExpressions()) {
+            ExprNodeDesc exprNode = col.getExprNode();
+            Utilities.mergeUniqElems(prunedCols, exprNode.getCols());
+          }
+        }
+      } else {
+        pDef.getOutputShape().setRr(buildPrunedRR(prunedCols, oldRS));
+      }
+      
+      PTFInputDef input = pDef.getInput();
+      if (input instanceof PartitionedTableFunctionDef) {
+        return prunedColumnsList(prunedCols, oldRS, (PartitionedTableFunctionDef)input);
+      }
+      
+      ArrayList<String> inputColumns = prunedInputList(prunedCols, input);
+      input.getOutputShape().setRr(buildPrunedRR(inputColumns, oldRS));
+      input.getOutputShape().setColumnNames(inputColumns);
+
+      return buildPrunedRS(prunedCols, oldRS);
+    }
+
+    /*
+     * from the prunedCols list filter out columns that refer to WindowFns or WindowExprs
+     * the returned list is set as the prunedList needed by the PTFOp.
+     */
+    private ArrayList<String> prunedInputList(List<String> prunedCols, PTFInputDef tDef) {
+      ArrayList<String> prunedInputCols = new ArrayList<String>();
+
+      StructObjectInspector OI = tDef.getOutputShape().getOI();
+      for(StructField f : OI.getAllStructFieldRefs()) {
+        String fName = f.getFieldName();
+        if ( prunedCols.contains(fName)) {
+          prunedInputCols.add(fName);
+        }
+      }
+
+      return prunedInputCols;
+    }
+  }
+
+  /**
+   * Factory method to get the ColumnPrunerGroupByProc class.
+   *
+   * @return ColumnPrunerGroupByProc
+   */
+  public static ColumnPrunerPTFProc getPTFProc() {
+    return new ColumnPrunerPTFProc();
+  }
+
   /**
    * The Default Node Processor for Column Pruning.
    */
   public static class ColumnPrunerDefaultProc implements NodeProcessor {
+    @Override
     public Object process(Node nd, Stack<Node> stack, NodeProcessorCtx ctx,
         Object... nodeOutputs) throws SemanticException {
       ColumnPrunerProcCtx cppCtx = (ColumnPrunerProcCtx) ctx;
-      cppCtx.getPrunedColLists().put((Operator<? extends Serializable>) nd,
-          cppCtx.genColLists((Operator<? extends Serializable>) nd));
+      cppCtx.getPrunedColLists().put((Operator<? extends OperatorDesc>) nd,
+          cppCtx.genColLists((Operator<? extends OperatorDesc>) nd));
 
       return null;
     }
@@ -170,47 +463,73 @@ public final class ColumnPrunerProcFactory {
    * store needed columns in tableScanDesc.
    */
   public static class ColumnPrunerTableScanProc implements NodeProcessor {
+    @Override
     public Object process(Node nd, Stack<Node> stack, NodeProcessorCtx ctx,
         Object... nodeOutputs) throws SemanticException {
       TableScanOperator scanOp = (TableScanOperator) nd;
       ColumnPrunerProcCtx cppCtx = (ColumnPrunerProcCtx) ctx;
       List<String> cols = cppCtx
-          .genColLists((Operator<? extends Serializable>) nd);
-      cppCtx.getPrunedColLists().put((Operator<? extends Serializable>) nd,
-          cols);
-      ArrayList<Integer> needed_columns = new ArrayList<Integer>();
-      RowResolver inputRR = cppCtx.getOpToParseCtxMap().get(scanOp).getRowResolver();
-      TableScanDesc desc = scanOp.getConf();
-      List<VirtualColumn> virtualCols = desc.getVirtualCols();
-      List<VirtualColumn> newVirtualCols = new ArrayList<VirtualColumn>();
-      for (int i = 0; i < cols.size(); i++) {
-        String[] tabCol = inputRR.reverseLookup(cols.get(i));
-        if(tabCol == null) {
-          continue;
-        }
-        ColumnInfo colInfo = inputRR.get(tabCol[0], tabCol[1]);
-        if (colInfo.getIsVirtualCol()) {
-          // part is also a virtual column, but part col should not in this
-          // list.
-          for (int j = 0; j < virtualCols.size(); j++) {
-            VirtualColumn vc = virtualCols.get(j);
-            if (vc.getName().equals(colInfo.getInternalName())) {
-              newVirtualCols.add(vc);
-            }
-          }
-          //no need to pass virtual columns to reader.
-          continue;
-        }
-        int position = inputRR.getPosition(cols.get(i));
-        if (position >=0) {
-          needed_columns.add(position);
-        }
+          .genColLists((Operator<? extends OperatorDesc>) nd);
+      if (cols == null && !scanOp.getConf().isGatherStats() ) {
+        scanOp.setNeededColumnIDs(null);
+        return null;
       }
 
-      desc.setVirtualCols(newVirtualCols);
-      scanOp.setNeededColumnIDs(needed_columns);
+      cols = cols == null ? new ArrayList<String>() : cols;
+
+      cppCtx.getPrunedColLists().put((Operator<? extends OperatorDesc>) nd,
+          cols);
+      RowSchema inputRS = scanOp.getSchema();
+      setupNeededColumns(scanOp, inputRS, cols);
+
       return null;
     }
+  }
+
+  public static void setupNeededColumns(TableScanOperator scanOp, RowSchema inputRS,
+      List<String> cols) throws SemanticException {
+    List<Integer> neededColumnIds = new ArrayList<Integer>();
+    List<String> neededColumnNames = new ArrayList<String>();
+    List<String> referencedColumnNames = new ArrayList<String>();
+    TableScanDesc desc = scanOp.getConf();
+    List<VirtualColumn> virtualCols = desc.getVirtualCols();
+    List<VirtualColumn> newVirtualCols = new ArrayList<VirtualColumn>();
+
+    // add virtual columns for ANALYZE TABLE
+    if(scanOp.getConf().isGatherStats()) {
+      cols.add(VirtualColumn.RAWDATASIZE.getName());
+    }
+
+    for (String column : cols) {
+      ColumnInfo colInfo = inputRS.getColumnInfo(column);
+      if (colInfo == null) {
+        continue;
+      }
+      referencedColumnNames.add(column);
+      if (colInfo.getIsVirtualCol()) {
+        // part is also a virtual column, but part col should not in this
+        // list.
+        for (int j = 0; j < virtualCols.size(); j++) {
+          VirtualColumn vc = virtualCols.get(j);
+          if (vc.getName().equals(colInfo.getInternalName())) {
+            newVirtualCols.add(vc);
+          }
+        }
+        //no need to pass virtual columns to reader.
+        continue;
+      }
+      int position = inputRS.getPosition(column);
+      if (position >= 0) {
+        // get the needed columns by id and name
+        neededColumnIds.add(position);
+        neededColumnNames.add(column);
+      }
+    }
+
+    desc.setVirtualCols(newVirtualCols);
+    scanOp.setNeededColumnIDs(neededColumnIds);
+    scanOp.setNeededColumns(neededColumnNames);
+    scanOp.setReferencedColumns(referencedColumnNames);
   }
 
   /**
@@ -226,61 +545,60 @@ public final class ColumnPrunerProcFactory {
    * The Node Processor for Column Pruning on Reduce Sink Operators.
    */
   public static class ColumnPrunerReduceSinkProc implements NodeProcessor {
+    @Override
     public Object process(Node nd, Stack<Node> stack, NodeProcessorCtx ctx,
         Object... nodeOutputs) throws SemanticException {
       ReduceSinkOperator op = (ReduceSinkOperator) nd;
       ColumnPrunerProcCtx cppCtx = (ColumnPrunerProcCtx) ctx;
-      HashMap<Operator<? extends Serializable>, OpParseContext> opToParseCtxMap = cppCtx
-          .getOpToParseCtxMap();
-      RowResolver redSinkRR = opToParseCtxMap.get(op).getRowResolver();
       ReduceSinkDesc conf = op.getConf();
-      List<Operator<? extends Serializable>> childOperators = op
-          .getChildOperators();
-      List<Operator<? extends Serializable>> parentOperators = op
-          .getParentOperators();
 
       List<String> colLists = new ArrayList<String>();
       ArrayList<ExprNodeDesc> keys = conf.getKeyCols();
+      LOG.debug("Reduce Sink Operator " + op.getIdentifier() + " key:" + keys);
       for (ExprNodeDesc key : keys) {
         colLists = Utilities.mergeUniqElems(colLists, key.getCols());
       }
+      for (ExprNodeDesc key : conf.getPartitionCols()) {
+        colLists = Utilities.mergeUniqElems(colLists, key.getCols());
+      }
 
-      if ((childOperators.size() == 1)
-          && (childOperators.get(0) instanceof JoinOperator)) {
-        assert parentOperators.size() == 1;
-        Operator<? extends Serializable> par = parentOperators.get(0);
-        JoinOperator childJoin = (JoinOperator) childOperators.get(0);
-        RowResolver parRR = opToParseCtxMap.get(par).getRowResolver();
-        List<String> childJoinCols = cppCtx.getJoinPrunedColLists().get(
-            childJoin).get((byte) conf.getTag());
-        boolean[] flags = new boolean[conf.getValueCols().size()];
-        for (int i = 0; i < flags.length; i++) {
-          flags[i] = false;
-        }
-        if (childJoinCols != null && childJoinCols.size() > 0) {
-          Map<String, ExprNodeDesc> exprMap = op.getColumnExprMap();
-          for (String childCol : childJoinCols) {
-            ExprNodeDesc desc = exprMap.get(childCol);
-            int index = conf.getValueCols().indexOf(desc);
-            flags[index] = true;
-            String[] nm = redSinkRR.reverseLookup(childCol);
-            if (nm != null) {
-              ColumnInfo cInfo = parRR.get(nm[0], nm[1]);
-              if (!colLists.contains(cInfo.getInternalName())) {
-                colLists.add(cInfo.getInternalName());
-              }
-            }
+      assert op.getNumChild() == 1;
+
+      Operator<? extends OperatorDesc> child = op.getChildOperators().get(0);
+
+      List<String> childCols;
+      if (child instanceof CommonJoinOperator) {
+        childCols = cppCtx.getJoinPrunedColLists().get(child)
+            .get((byte) conf.getTag());
+      } else {
+        childCols = cppCtx.getPrunedColList(child);
+
+      }
+      List<ExprNodeDesc> valCols = conf.getValueCols();
+      List<String> valColNames = conf.getOutputValueColumnNames();
+
+      if (childCols != null) {
+        boolean[] flags = new boolean[valCols.size()];
+
+        for (String childCol : childCols) {
+          int index = valColNames.indexOf(Utilities.removeValueTag(childCol));
+          if (index < 0) {
+            continue;
           }
+          flags[index] = true;
+          colLists = Utilities.mergeUniqElems(colLists, valCols.get(index).getCols());
         }
+
         Collections.sort(colLists);
         pruneReduceSinkOperator(flags, op, cppCtx);
-      } else {
-        // Reduce Sink contains the columns needed - no need to aggregate from
-        // children
-        ArrayList<ExprNodeDesc> vals = conf.getValueCols();
-        for (ExprNodeDesc val : vals) {
-          colLists = Utilities.mergeUniqElems(colLists, val.getCols());
-        }
+        cppCtx.getPrunedColLists().put(op, colLists);
+        return null;
+      }
+
+      // Reduce Sink contains the columns needed - no need to aggregate from
+      // children
+      for (ExprNodeDesc val : valCols) {
+        colLists = Utilities.mergeUniqElems(colLists, val.getCols());
       }
 
       cppCtx.getPrunedColLists().put(op, colLists);
@@ -301,31 +619,91 @@ public final class ColumnPrunerProcFactory {
    * The Node Processor for Column Pruning on Lateral View Join Operators.
    */
   public static class ColumnPrunerLateralViewJoinProc implements NodeProcessor {
+    @Override
     public Object process(Node nd, Stack<Node> stack, NodeProcessorCtx ctx,
         Object... nodeOutputs) throws SemanticException {
       LateralViewJoinOperator op = (LateralViewJoinOperator) nd;
       ColumnPrunerProcCtx cppCtx = (ColumnPrunerProcCtx) ctx;
-      List<String> cols = new ArrayList<String>();
+      List<String> cols = cppCtx.genColLists(op);
+      if (cols == null) {
+        return null;
+      }
 
-      cols = cppCtx.genColLists(op);
       Map<String, ExprNodeDesc> colExprMap = op.getColumnExprMap();
-
       // As columns go down the DAG, the LVJ will transform internal column
       // names from something like 'key' to '_col0'. Because of this, we need
       // to undo this transformation using the column expression map as the
       // column names propagate up the DAG.
+
+      // this is SEL(*) cols + UDTF cols
+      List<String> outputCols = op.getConf().getOutputInternalColNames();
+
+      // cause we cannot prune columns from UDTF branch currently, extract
+      // columns from SEL(*) branch only and append all columns from UDTF branch to it
+      int numSelColumns = op.getConf().getNumSelColumns();
+
       List<String> colsAfterReplacement = new ArrayList<String>();
+      ArrayList<String> newColNames = new ArrayList<String>();
       for (String col : cols) {
-        if (colExprMap.containsKey(col)) {
-          ExprNodeDesc expr = colExprMap.get(col);
-          colsAfterReplacement.addAll(expr.getCols());
-        } else {
-          colsAfterReplacement.add(col);
+        int index = outputCols.indexOf(col);
+        // colExprMap.size() == size of cols from SEL(*) branch
+        if (index >= 0 && index < numSelColumns) {
+          ExprNodeDesc transformed = colExprMap.get(col);
+          Utilities.mergeUniqElems(colsAfterReplacement, transformed.getCols());
+          newColNames.add(col);
         }
       }
+      // update number of columns from sel(*)
+      op.getConf().setNumSelColumns(newColNames.size());
 
-      cppCtx.getPrunedColLists().put(op,
-          colsAfterReplacement);
+      // add all UDTF columns
+      // following SEL will do CP for columns from UDTF, not adding SEL in here
+      newColNames.addAll(outputCols.subList(numSelColumns, outputCols.size()));
+      op.getConf().setOutputInternalColNames(newColNames);
+      pruneOperator(ctx, op, newColNames);
+      cppCtx.getPrunedColLists().put(op, colsAfterReplacement);
+      return null;
+    }
+  }
+
+  /**
+   * The Node Processor for Column Pruning on Lateral View Forward Operators.
+   */
+  public static class ColumnPrunerLateralViewForwardProc extends ColumnPrunerDefaultProc {
+    @Override
+    public Object process(Node nd, Stack<Node> stack, NodeProcessorCtx ctx,
+        Object... nodeOutputs) throws SemanticException {
+      super.process(nd, stack, ctx, nodeOutputs);
+      LateralViewForwardOperator op = (LateralViewForwardOperator) nd;
+      ColumnPrunerProcCtx cppCtx = (ColumnPrunerProcCtx) ctx;
+
+      // get the SEL(*) branch
+      Operator<?> select = op.getChildOperators().get(LateralViewJoinOperator.SELECT_TAG);
+
+      // Update the info of SEL operator based on the pruned reordered columns
+      // these are from ColumnPrunerSelectProc
+      List<String> cols = cppCtx.getPrunedColList(select);
+      RowSchema rs = op.getSchema();
+      ArrayList<ExprNodeDesc> colList = new ArrayList<ExprNodeDesc>();
+      ArrayList<String> outputColNames = new ArrayList<String>();
+      for (String col : cols) {
+        // revert output cols of SEL(*) to ExprNodeColumnDesc
+        ColumnInfo colInfo = rs.getColumnInfo(col);
+        ExprNodeColumnDesc colExpr = new ExprNodeColumnDesc(colInfo);
+        colList.add(colExpr);
+        outputColNames.add(col);
+      }
+      // replace SEL(*) to SEL(exprs)
+      ((SelectDesc)select.getConf()).setSelStarNoCompute(false);
+      ((SelectDesc)select.getConf()).setColList(colList);
+      ((SelectDesc)select.getConf()).setOutputColumnNames(outputColNames);
+      pruneOperator(ctx, select, outputColNames);
+      
+      Operator<?> udtfPath = op.getChildOperators().get(LateralViewJoinOperator.UDTF_TAG);
+      List<String> lvFCols = new ArrayList<String>(cppCtx.getPrunedColLists().get(udtfPath));
+      lvFCols = Utilities.mergeUniqElems(lvFCols, outputColNames);
+      pruneOperator(ctx, op, lvFCols);
+      
       return null;
     }
   }
@@ -334,67 +712,76 @@ public final class ColumnPrunerProcFactory {
    * The Node Processor for Column Pruning on Select Operators.
    */
   public static class ColumnPrunerSelectProc implements NodeProcessor {
+    @Override
     public Object process(Node nd, Stack<Node> stack, NodeProcessorCtx ctx,
         Object... nodeOutputs) throws SemanticException {
       SelectOperator op = (SelectOperator) nd;
       ColumnPrunerProcCtx cppCtx = (ColumnPrunerProcCtx) ctx;
-      List<String> cols = new ArrayList<String>();
+
 
       if (op.getChildOperators() != null) {
-        for (Operator<? extends Serializable> child : op.getChildOperators()) {
-          // If one of my children is a FileSink or Script, return all columns.
-          // Without this break, a bug in ReduceSink to Extract edge column
-          // pruning will manifest
-          // which should be fixed before remove this
-          if ((child instanceof FileSinkOperator)
-              || (child instanceof ScriptOperator)
-              || (child instanceof UDTFOperator)
-              || (child instanceof LimitOperator)
-              || (child instanceof UnionOperator)) {
+        for (Operator<? extends OperatorDesc> child : op.getChildOperators()) {
+          // UDTF is not handled yet, so the parent SelectOp of UDTF should just assume
+          // all columns.
+          if ((child instanceof UDTFOperator)) {
             cppCtx.getPrunedColLists()
                 .put(op, cppCtx.getColsFromSelectExpr(op));
             return null;
           }
         }
       }
-      cols = cppCtx.genColLists(op);
+
+      LateralViewJoinOperator lvJoin = null;
+      if (op.getConf().isSelStarNoCompute()) {
+        assert op.getNumChild() == 1;
+        Operator<? extends OperatorDesc> child = op.getChildOperators().get(0);
+        if (child instanceof LateralViewJoinOperator) { // this SEL is SEL(*)
+                                                        // for LV
+          lvJoin = (LateralViewJoinOperator) child;
+        }
+      }
+
+      List<String> cols = cppCtx.genColLists(op);
 
       SelectDesc conf = op.getConf();
+
+      if (lvJoin != null) {
+        // get columns for SEL(*) from LVJ
+        if (cols != null) {
+          RowSchema rs = op.getSchema();
+          cppCtx.getPrunedColLists().put(op,
+              cppCtx.getSelectColsFromLVJoin(rs, cols));
+        }
+        return null;
+      }
       // The input to the select does not matter. Go over the expressions
       // and return the ones which have a marked column
       cppCtx.getPrunedColLists().put(op,
           cppCtx.getSelectColsFromChildren(op, cols));
 
-      if (conf.isSelStarNoCompute()) {
+      if (cols == null || conf.isSelStarNoCompute()) {
         return null;
       }
 
       // do we need to prune the select operator?
       List<ExprNodeDesc> originalColList = op.getConf().getColList();
-      List<String> columns = new ArrayList<String>();
-      for (ExprNodeDesc expr : originalColList) {
-        Utilities.mergeUniqElems(columns, expr.getCols());
-      }
       // by now, 'prunedCols' are columns used by child operators, and 'columns'
       // are columns used by this select operator.
-      ArrayList<String> originalOutputColumnNames = conf.getOutputColumnNames();
+      List<String> originalOutputColumnNames = conf.getOutputColumnNames();
       if (cols.size() < originalOutputColumnNames.size()) {
         ArrayList<ExprNodeDesc> newColList = new ArrayList<ExprNodeDesc>();
         ArrayList<String> newOutputColumnNames = new ArrayList<String>();
         ArrayList<ColumnInfo> rs_oldsignature = op.getSchema().getSignature();
         ArrayList<ColumnInfo> rs_newsignature = new ArrayList<ColumnInfo>();
-        RowResolver old_rr = cppCtx.getOpToParseCtxMap().get(op).getRowResolver();
-        RowResolver new_rr = new RowResolver();
-        for (String col : cols) {
-          int index = originalOutputColumnNames.indexOf(col);
-          newOutputColumnNames.add(col);
-          newColList.add(originalColList.get(index));
-          rs_newsignature.add(rs_oldsignature.get(index));
-          String[] tabcol = old_rr.reverseLookup(col);
-          ColumnInfo columnInfo = old_rr.get(tabcol[0], tabcol[1]);
-          new_rr.put(tabcol[0], tabcol[1], columnInfo);
+        // The pruning needs to preserve the order of columns in the input schema
+        for (int i = 0; i < originalOutputColumnNames.size(); i++) {
+          String colName = originalOutputColumnNames.get(i);
+          if (cols.contains(colName)) {
+            newOutputColumnNames.add(colName);
+            newColList.add(originalColList.get(i));
+            rs_newsignature.add(rs_oldsignature.get(i));
+          }
         }
-        cppCtx.getOpToParseCtxMap().get(op).setRowResolver(new_rr);
         op.getSchema().setSignature(rs_newsignature);
         conf.setColList(newColList);
         conf.setOutputColumnNames(newOutputColumnNames);
@@ -415,14 +802,14 @@ public final class ColumnPrunerProcFactory {
      */
     private void handleChildren(SelectOperator op,
         List<String> retainedSelOutputCols, ColumnPrunerProcCtx cppCtx) throws SemanticException {
-      for (Operator<? extends Serializable> child : op.getChildOperators()) {
+      for (Operator<? extends OperatorDesc> child : op.getChildOperators()) {
         if (child instanceof ReduceSinkOperator) {
           boolean[] flags = getPruneReduceSinkOpRetainFlags(
               retainedSelOutputCols, (ReduceSinkOperator) child);
           pruneReduceSinkOperator(flags, (ReduceSinkOperator) child, cppCtx);
         } else if (child instanceof FilterOperator) {
           // filter operator has the same output columns as its parent
-          for (Operator<? extends Serializable> filterChild : child
+          for (Operator<? extends OperatorDesc> filterChild : child
               .getChildOperators()) {
             if (filterChild instanceof ReduceSinkOperator) {
               boolean[] flags = getPruneReduceSinkOpRetainFlags(
@@ -463,58 +850,56 @@ public final class ColumnPrunerProcFactory {
       ReduceSinkOperator reduce, ColumnPrunerProcCtx cppCtx) throws SemanticException {
     ReduceSinkDesc reduceConf = reduce.getConf();
     Map<String, ExprNodeDesc> oldMap = reduce.getColumnExprMap();
-    Map<String, ExprNodeDesc> newMap = new HashMap<String, ExprNodeDesc>();
-    ArrayList<ColumnInfo> sig = new ArrayList<ColumnInfo>();
-    RowResolver oldRR = cppCtx.getOpToParseCtxMap().get(reduce).getRowResolver();
-    RowResolver newRR = new RowResolver();
-    ArrayList<String> originalValueOutputColNames = reduceConf
-        .getOutputValueColumnNames();
-    java.util.ArrayList<ExprNodeDesc> originalValueEval = reduceConf
-        .getValueCols();
-    ArrayList<String> newOutputColNames = new ArrayList<String>();
-    java.util.ArrayList<ExprNodeDesc> newValueEval = new ArrayList<ExprNodeDesc>();
+    LOG.info("RS " + reduce.getIdentifier() + " oldColExprMap: " + oldMap);
+    RowSchema oldRS = reduce.getSchema();
+    ArrayList<ColumnInfo> old_signature = oldRS.getSignature();
+    ArrayList<ColumnInfo> signature = new ArrayList<ColumnInfo>(old_signature);
+
+    List<String> valueColNames = reduceConf.getOutputValueColumnNames();
+    ArrayList<String> newValueColNames = new ArrayList<String>();
+
+    List<ExprNodeDesc> keyExprs = reduceConf.getKeyCols();
+    List<ExprNodeDesc> valueExprs = reduceConf.getValueCols();
+    ArrayList<ExprNodeDesc> newValueExprs = new ArrayList<ExprNodeDesc>();
+
     for (int i = 0; i < retainFlags.length; i++) {
-      if (retainFlags[i]) {
-        newValueEval.add(originalValueEval.get(i));
-        String outputCol = originalValueOutputColNames.get(i);
-        newOutputColNames.add(outputCol);
-        String[] nm = oldRR.reverseLookup(outputCol);
-        if (nm == null) {
+      String outputCol = valueColNames.get(i);
+      ExprNodeDesc outputColExpr = valueExprs.get(i);
+      if (!retainFlags[i]) {
+        ColumnInfo colInfo = oldRS.getColumnInfo(outputCol);
+        if (colInfo == null) {
           outputCol = Utilities.ReduceField.VALUE.toString() + "." + outputCol;
-          nm = oldRR.reverseLookup(outputCol);
+          colInfo = oldRS.getColumnInfo(outputCol);
         }
-        newMap.put(outputCol, oldMap.get(outputCol));
-        ColumnInfo colInfo = oldRR.get(nm[0], nm[1]);
-        newRR.put(nm[0], nm[1], colInfo);
-        sig.add(colInfo);
+
+        // In case there are multiple columns referenced to the same column name, we won't
+        // do row resolve once more because the ColumnInfo in row resolver is already removed
+        if (colInfo == null) {
+          continue;
+        }
+
+        // Only remove information of a column if it is not a key,
+        // i.e. this column is not appearing in keyExprs of the RS
+        if (ExprNodeDescUtils.indexOf(outputColExpr, keyExprs) == -1) {
+          oldMap.remove(outputCol);
+          signature.remove(colInfo);
+        }
+
+      } else {
+        newValueColNames.add(outputCol);
+        newValueExprs.add(outputColExpr);
       }
     }
 
-    ArrayList<ExprNodeDesc> keyCols = reduceConf.getKeyCols();
-    List<String> keys = new ArrayList<String>();
-    RowResolver parResover = cppCtx.getOpToParseCtxMap().get(
-        reduce.getParentOperators().get(0)).getRowResolver();
-    for (int i = 0; i < keyCols.size(); i++) {
-      keys = Utilities.mergeUniqElems(keys, keyCols.get(i).getCols());
-    }
-    for (int i = 0; i < keys.size(); i++) {
-      String outputCol = keys.get(i);
-      String[] nm = parResover.reverseLookup(outputCol);
-      ColumnInfo colInfo = oldRR.get(nm[0], nm[1]);
-      if (colInfo != null) {
-        newRR.put(nm[0], nm[1], colInfo);
-      }
-    }
-
-    cppCtx.getOpToParseCtxMap().get(reduce).setRowResolver(newRR);
-    reduce.setColumnExprMap(newMap);
-    reduce.getSchema().setSignature(sig);
-    reduceConf.setOutputValueColumnNames(newOutputColNames);
-    reduceConf.setValueCols(newValueEval);
+    oldRS.setSignature(signature);
+    reduce.getSchema().setSignature(signature);
+    reduceConf.setOutputValueColumnNames(newValueColNames);
+    reduceConf.setValueCols(newValueExprs);
     TableDesc newValueTable = PlanUtils.getReduceValueTableDesc(PlanUtils
         .getFieldSchemasFromColumnList(reduceConf.getValueCols(),
-        newOutputColNames, 0, ""));
+        newValueColNames, 0, ""));
     reduceConf.setValueSerializeInfo(newValueTable);
+    LOG.info("RS " + reduce.getIdentifier() + " newColExprMap: " + oldMap);
   }
 
   /**
@@ -530,10 +915,15 @@ public final class ColumnPrunerProcFactory {
     return new ColumnPrunerLateralViewJoinProc();
   }
 
+  public static ColumnPrunerLateralViewForwardProc getLateralViewForwardProc() {
+    return new ColumnPrunerLateralViewForwardProc();
+  }
+
   /**
    * The Node Processor for Column Pruning on Join Operators.
    */
   public static class ColumnPrunerJoinProc implements NodeProcessor {
+    @Override
     public Object process(Node nd, Stack<Node> stack, NodeProcessorCtx ctx,
         Object... nodeOutputs) throws SemanticException {
       JoinOperator op = (JoinOperator) nd;
@@ -556,49 +946,117 @@ public final class ColumnPrunerProcFactory {
    * The Node Processor for Column Pruning on Map Join Operators.
    */
   public static class ColumnPrunerMapJoinProc implements NodeProcessor {
+    @Override
     public Object process(Node nd, Stack<Node> stack, NodeProcessorCtx ctx,
         Object... nodeOutputs) throws SemanticException {
-      MapJoinOperator op = (MapJoinOperator) nd;
+      AbstractMapJoinOperator<MapJoinDesc> op = (AbstractMapJoinOperator<MapJoinDesc>) nd;
       pruneJoinOperator(ctx, op, op.getConf(), op.getColumnExprMap(), op
           .getConf().getRetainList(), true);
       return null;
     }
   }
 
+  /**
+   * The Factory method to get UnionProc class.
+   *
+   * @return UnionProc
+   */
+  public static ColumnPrunerUnionProc getUnionProc() {
+    return new ColumnPrunerUnionProc();
+  }
+
+  /**
+   * The Node Processor for Column Pruning on Union Operators.
+   */
+  public static class ColumnPrunerUnionProc implements NodeProcessor {
+    @Override
+    public Object process(Node nd, Stack<Node> stack, NodeProcessorCtx ctx, Object... nodeOutputs)
+        throws SemanticException {
+      ColumnPrunerProcCtx cppCtx = (ColumnPrunerProcCtx) ctx;
+      UnionOperator op = (UnionOperator) nd;
+      List<String> childColLists = cppCtx.genColLists(op);
+      if (childColLists == null) {
+        return null;
+      }
+      RowSchema inputSchema = op.getSchema();
+      if (inputSchema != null) {
+        List<Integer> positions = new ArrayList<>();
+        RowSchema oldRS = op.getSchema();
+        for (int index = 0; index < oldRS.getSignature().size(); index++) {
+          ColumnInfo colInfo = oldRS.getSignature().get(index);
+          if (childColLists.contains(colInfo.getInternalName())) {
+            positions.add(index);
+          }
+        }
+        cppCtx.getUnionPrunedColLists().put(op, positions);
+      }
+      return null;
+    }
+  }
+
   private static void pruneOperator(NodeProcessorCtx ctx,
-      Operator<? extends Serializable> op,
+      Operator<? extends OperatorDesc> op,
       List<String> cols)
       throws SemanticException {
     // the pruning needs to preserve the order of columns in the input schema
     RowSchema inputSchema = op.getSchema();
     if (inputSchema != null) {
       ArrayList<ColumnInfo> rs = new ArrayList<ColumnInfo>();
-      ArrayList<ColumnInfo> inputCols = inputSchema.getSignature();
-    	for (ColumnInfo i: inputCols) {
-        if (cols.contains(i.getInternalName())) {
+      RowSchema oldRS = op.getSchema();
+      for(ColumnInfo i : oldRS.getSignature()) {
+        if ( cols.contains(i.getInternalName())) {
           rs.add(i);
         }
-    	}
+      }
       op.getSchema().setSignature(rs);
     }
   }
+
+  /**
+   * The pruning needs to preserve the order of columns in the input schema
+   * @param op
+   * @param cols
+   * @return
+   * @throws SemanticException
+   */
+  private static List<String> preserveColumnOrder(Operator<? extends OperatorDesc> op,
+      List<String> cols)
+      throws SemanticException {
+    RowSchema inputSchema = op.getSchema();
+    if (inputSchema != null) {
+      ArrayList<String> rs = new ArrayList<String>();
+      ArrayList<ColumnInfo> inputCols = inputSchema.getSignature();
+      for (ColumnInfo i: inputCols) {
+        if (cols.contains(i.getInternalName())) {
+          rs.add(i.getInternalName());
+        }
+      }
+      return rs;
+    } else {
+      return cols;
+    }
+  }
+
 
   private static void pruneJoinOperator(NodeProcessorCtx ctx,
       CommonJoinOperator op, JoinDesc conf,
       Map<String, ExprNodeDesc> columnExprMap,
       Map<Byte, List<Integer>> retainMap, boolean mapJoin) throws SemanticException {
     ColumnPrunerProcCtx cppCtx = (ColumnPrunerProcCtx) ctx;
-    Map<Byte, List<String>> prunedColLists = new HashMap<Byte, List<String>>();
-    List<Operator<? extends Serializable>> childOperators = op
+    List<Operator<? extends OperatorDesc>> childOperators = op
         .getChildOperators();
 
-    for (Operator<? extends Serializable> child : childOperators) {
-      if (child instanceof FileSinkOperator) {
+    LOG.info("JOIN " + op.getIdentifier() + " oldExprs: " + conf.getExprs());
+    List<String> childColLists = cppCtx.genColLists(op);
+    if (childColLists == null) {
         return;
       }
-    }
 
-    List<String> childColLists = cppCtx.genColLists(op);
+
+  Map<Byte, List<String>> prunedColLists = new HashMap<Byte, List<String>>();
+  for (byte tag : conf.getTagOrder()) {
+    prunedColLists.put(tag, new ArrayList<String>());
+  }
 
     //add the columns in join filters
     Set<Map.Entry<Byte, List<ExprNodeDesc>>> filters =
@@ -614,8 +1072,7 @@ public final class ColumnPrunerProcFactory {
      }
     }
 
-    RowResolver joinRR = cppCtx.getOpToParseCtxMap().get(op).getRowResolver();
-    RowResolver newJoinRR = new RowResolver();
+    RowSchema joinRS = op.getSchema();
     ArrayList<String> outputCols = new ArrayList<String>();
     ArrayList<ColumnInfo> rs = new ArrayList<ColumnInfo>();
     Map<String, ExprNodeDesc> newColExprMap = new HashMap<String, ExprNodeDesc>();
@@ -650,7 +1107,7 @@ public final class ColumnPrunerProcFactory {
       List<TableDesc> valueTableDescs = new ArrayList<TableDesc>();
       for (int pos = 0; pos < op.getParentOperators().size(); pos++) {
         List<ExprNodeDesc> valueCols = conf.getExprs()
-            .get(new Byte((byte) pos));
+            .get(Byte.valueOf((byte) pos));
         StringBuilder keyOrder = new StringBuilder();
         for (int i = 0; i < valueCols.size(); i++) {
           keyOrder.append("+");
@@ -680,7 +1137,7 @@ public final class ColumnPrunerProcFactory {
 
     }
 
-    for (Operator<? extends Serializable> child : childOperators) {
+    for (Operator<? extends OperatorDesc> child : childOperators) {
       if (child instanceof ReduceSinkOperator) {
         boolean[] flags = getPruneReduceSinkOpRetainFlags(childColLists,
             (ReduceSinkOperator) child);
@@ -690,16 +1147,14 @@ public final class ColumnPrunerProcFactory {
 
     for (int i = 0; i < outputCols.size(); i++) {
       String internalName = outputCols.get(i);
-      String[] nm = joinRR.reverseLookup(internalName);
-      ColumnInfo col = joinRR.get(nm[0], nm[1]);
-      newJoinRR.put(nm[0], nm[1], col);
+      ColumnInfo col = joinRS.getColumnInfo(internalName);
       rs.add(col);
     }
 
+    LOG.info("JOIN " + op.getIdentifier() + " newExprs: " + conf.getExprs());
     op.setColumnExprMap(newColExprMap);
     conf.setOutputColumnNames(outputCols);
     op.getSchema().setSignature(rs);
-    cppCtx.getOpToParseCtxMap().get(op).setRowResolver(newJoinRR);
     cppCtx.getJoinPrunedColLists().put(op, prunedColLists);
   }
 
